--- a/parts/tools/addtooldlg.ui
+++ b/parts/tools/addtooldlg.ui
@@ -19,13 +19,15 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QLabel" row="3" column="0">
             <property name="name">
                 <cstring>cmdlineLabel_2</cstring>
             </property>
             <property name="text">
-                <string>Parameters:</string>
+                <string>&amp;Parameters:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>paramEdit</cstring>
             </property>
         </widget>
         <widget class="QCheckBox" row="4" column="0" rowspan="1" colspan="2">
@@ -33,7 +35,7 @@
                 <cstring>capturedBox</cstring>
             </property>
             <property name="text">
-                <string>Capture output</string>
+                <string>C&amp;apture output</string>
             </property>
         </widget>
         <widget class="QLabel" row="2" column="0">
@@ -41,7 +43,10 @@
                 <cstring>cmdlineLabel</cstring>
             </property>
             <property name="text">
-                <string>Executable:</string>
+                <string>&amp;Executable:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>execEdit</cstring>
             </property>
         </widget>
         <widget class="Line" row="5" column="0" rowspan="1" colspan="2">
@@ -63,7 +68,10 @@
                 <cstring>menutextLabel</cstring>
             </property>
             <property name="text">
-                <string>Menu text:</string>
+                <string>&amp;Menu text:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>menutextEdit</cstring>
             </property>
         </widget>
         <widget class="QLineEdit" row="3" column="1">
@@ -87,7 +95,6 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-
                 <spacer>
                     <property name="name">
                         <cstring>Spacer4</cstring>
@@ -111,6 +118,9 @@
                     </property>
                     <property name="text">
                         <string>&amp;OK</string>
+                    </property>
+                    <property name="default">
+                        <bool>true</bool>
                     </property>
                 </widget>
                 <widget class="QPushButton">
@@ -139,6 +149,9 @@
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                 </sizepolicy>
+            </property>
+            <property name="focusPolicy">
+                <enum>StrongFocus</enum>
             </property>
         </widget>
     </grid>
@@ -181,18 +194,18 @@
     </connection>
 </connections>
 <tabstops>
+    <tabstop>tree</tabstop>
     <tabstop>menutextEdit</tabstop>
+    <tabstop>execEdit</tabstop>
     <tabstop>paramEdit</tabstop>
     <tabstop>capturedBox</tabstop>
     <tabstop>okButton</tabstop>
     <tabstop>cancelButton</tabstop>
 </tabstops>
 <includes>
-    <include location="local" impldecl="in implementation">addtooldlg.ui.h</include>
     <include location="global" impldecl="in implementation">kdialog.h</include>
+    <include location="local" impldecl="in implementation">addtooldlg.ui.h</include>
 </includes>
-<layoutdefaults spacing="6" margin="11"/>
-<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <forwards>
     <forward>class QListViewItem;</forward>
 </forwards>
@@ -201,6 +214,8 @@
     <slot returnType="QString">getApp()</slot>
     <slot access="private">treeSelectionChanged( QListViewItem * lvi )</slot>
 </slots>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
