--- a/parts/tools/toolsconfigwidgetbase.ui
+++ b/parts/tools/toolsconfigwidgetbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>ToolsConfigWidgetBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -34,13 +34,12 @@
                     <cstring>toolmenuTab</cstring>
                 </property>
                 <attribute name="title">
-                    <string>Tools Menu</string>
+                    <string>&amp;Tools Menu</string>
                 </attribute>
                 <grid>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QListBox" row="0" column="0">
                         <property name="name">
                             <cstring>toolsmenuBox</cstring>
@@ -57,7 +56,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer9_3</cstring>
@@ -68,13 +66,22 @@
                                 <property name="sizeType">
                                     <enum>Expanding</enum>
                                 </property>
+                                <property name="sizeHint">
+                                    <size>
+                                        <width>20</width>
+                                        <height>20</height>
+                                    </size>
+                                </property>
                             </spacer>
                             <widget class="QPushButton">
                                 <property name="name">
                                     <cstring>toolsmenuaddButton</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Add...</string>
+                                    <string>&amp;Add...</string>
+                                </property>
+                                <property name="autoDefault">
+                                    <bool>true</bool>
                                 </property>
                             </widget>
                             <widget class="QPushButton">
@@ -82,7 +89,10 @@
                                     <cstring>toolsmenuremoveButton</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Remove</string>
+                                    <string>&amp;Remove</string>
+                                </property>
+                                <property name="autoDefault">
+                                    <bool>true</bool>
                                 </property>
                             </widget>
                             <spacer>
@@ -94,6 +104,12 @@
                                 </property>
                                 <property name="sizeType">
                                     <enum>Expanding</enum>
+                                </property>
+                                <property name="sizeHint">
+                                    <size>
+                                        <width>20</width>
+                                        <height>20</height>
+                                    </size>
                                 </property>
                             </spacer>
                         </vbox>
@@ -108,6 +124,12 @@
                         <property name="sizeType">
                             <enum>Expanding</enum>
                         </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
                     </spacer>
                 </grid>
             </widget>
@@ -116,13 +138,12 @@
                     <cstring>filecontextTab</cstring>
                 </property>
                 <attribute name="title">
-                    <string>File Context Menu</string>
+                    <string>&amp;File Context Menu</string>
                 </attribute>
                 <grid>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QListBox" row="0" column="0">
                         <property name="name">
                             <cstring>filecontextBox</cstring>
@@ -139,7 +160,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer9_2</cstring>
@@ -150,13 +170,22 @@
                                 <property name="sizeType">
                                     <enum>Expanding</enum>
                                 </property>
+                                <property name="sizeHint">
+                                    <size>
+                                        <width>20</width>
+                                        <height>20</height>
+                                    </size>
+                                </property>
                             </spacer>
                             <widget class="QPushButton">
                                 <property name="name">
                                     <cstring>filecontextaddButton</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Add...</string>
+                                    <string>&amp;Add...</string>
+                                </property>
+                                <property name="autoDefault">
+                                    <bool>true</bool>
                                 </property>
                             </widget>
                             <widget class="QPushButton">
@@ -164,7 +193,10 @@
                                     <cstring>filecontextremoveButton</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Remove</string>
+                                    <string>&amp;Remove</string>
+                                </property>
+                                <property name="autoDefault">
+                                    <bool>true</bool>
                                 </property>
                             </widget>
                             <spacer>
@@ -176,6 +208,12 @@
                                 </property>
                                 <property name="sizeType">
                                     <enum>Expanding</enum>
+                                </property>
+                                <property name="sizeHint">
+                                    <size>
+                                        <width>20</width>
+                                        <height>20</height>
+                                    </size>
                                 </property>
                             </spacer>
                         </vbox>
@@ -190,6 +228,12 @@
                         <property name="sizeType">
                             <enum>Expanding</enum>
                         </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
                     </spacer>
                 </grid>
             </widget>
@@ -198,13 +242,12 @@
                     <cstring>dircontextTab</cstring>
                 </property>
                 <attribute name="title">
-                    <string>Directory Context Menu</string>
+                    <string>&amp;Directory Context Menu</string>
                 </attribute>
                 <grid>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QListBox" row="0" column="0">
                         <property name="name">
                             <cstring>dircontextBox</cstring>
@@ -221,7 +264,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer9</cstring>
@@ -232,13 +274,22 @@
                                 <property name="sizeType">
                                     <enum>Expanding</enum>
                                 </property>
+                                <property name="sizeHint">
+                                    <size>
+                                        <width>20</width>
+                                        <height>20</height>
+                                    </size>
+                                </property>
                             </spacer>
                             <widget class="QPushButton">
                                 <property name="name">
                                     <cstring>dircontextaddButton</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Add...</string>
+                                    <string>&amp;Add...</string>
+                                </property>
+                                <property name="autoDefault">
+                                    <bool>true</bool>
                                 </property>
                             </widget>
                             <widget class="QPushButton">
@@ -246,7 +297,10 @@
                                     <cstring>dircontextremoveButton</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Remove</string>
+                                    <string>&amp;Remove</string>
+                                </property>
+                                <property name="autoDefault">
+                                    <bool>true</bool>
                                 </property>
                             </widget>
                             <spacer>
@@ -258,6 +312,12 @@
                                 </property>
                                 <property name="sizeType">
                                     <enum>Expanding</enum>
+                                </property>
+                                <property name="sizeHint">
+                                    <size>
+                                        <width>20</width>
+                                        <height>20</height>
+                                    </size>
                                 </property>
                             </spacer>
                         </vbox>
@@ -271,6 +331,12 @@
                         </property>
                         <property name="sizeType">
                             <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
                         </property>
                     </spacer>
                 </grid>
@@ -316,6 +382,21 @@
         <slot>toolsmenuremoveClicked()</slot>
     </connection>
 </connections>
+<tabstops>
+    <tabstop>toolsmenuBox</tabstop>
+    <tabstop>toolsmenuaddButton</tabstop>
+    <tabstop>toolsmenuremoveButton</tabstop>
+    <tabstop>tabwidget</tabstop>
+    <tabstop>filecontextBox</tabstop>
+    <tabstop>filecontextaddButton</tabstop>
+    <tabstop>filecontextremoveButton</tabstop>
+    <tabstop>dircontextBox</tabstop>
+    <tabstop>dircontextaddButton</tabstop>
+    <tabstop>dircontextremoveButton</tabstop>
+</tabstops>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <slots>
     <slot access="protected">dircontextaddClicked()</slot>
     <slot access="protected">filecontextaddClicked()</slot>
@@ -324,9 +405,6 @@
     <slot access="protected">toolsmenuaddClicked()</slot>
     <slot access="protected">toolsmenuremoveClicked()</slot>
 </slots>
-<includes>
-    <include location="global" impldecl="in implementation">kdialog.h</include>
-</includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
