--- a/buildtools/ant/antoptionswidget.ui
+++ b/buildtools/ant/antoptionswidget.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>AntOptionsWidget</class>
 <widget class="QWidget">
     <property name="name">
@@ -39,7 +39,7 @@
                 <cstring>Verbosity</cstring>
             </property>
         </widget>
-        <spacer row="4" column="2">
+        <spacer row="3" column="2">
             <property name="name">
                 <cstring>Spacer1</cstring>
             </property>
@@ -51,12 +51,12 @@
             </property>
             <property name="sizeHint">
                 <size>
-                    <width>0</width>
-                    <height>20</height>
+                    <width>16</width>
+                    <height>86</height>
                 </size>
             </property>
         </spacer>
-        <spacer row="4" column="0">
+        <spacer row="3" column="0">
             <property name="name">
                 <cstring>Spacer2</cstring>
             </property>
@@ -68,8 +68,8 @@
             </property>
             <property name="sizeHint">
                 <size>
-                    <width>0</width>
-                    <height>20</height>
+                    <width>16</width>
+                    <height>86</height>
                 </size>
             </property>
         </spacer>
@@ -109,51 +109,15 @@
                 <cstring>Properties</cstring>
             </property>
         </widget>
-        <widget class="QLayoutWidget" row="0" column="1" rowspan="1" colspan="2">
-            <property name="name">
-                <cstring>Layout1</cstring>
-            </property>
-            <hbox>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <property name="margin">
-                    <number>0</number>
-                </property>
-
-                <widget class="KLineEdit">
-                    <property name="name">
-                        <cstring>BuildXML</cstring>
-                    </property>
-                    <property name="text">
-                        <string>build.xml</string>
-                    </property>
-                </widget>
-                <widget class="KPushButton">
-                    <property name="name">
-                        <cstring>BrowseFile</cstring>
-                    </property>
-                    <property name="text">
-                        <string>...</string>
-                    </property>
-                </widget>
-            </hbox>
-        </widget>
         <widget class="QTable" row="2" column="1" rowspan="1" colspan="2">
             <column>
                 <property name="text">
                     <string>Property</string>
                 </property>
-                <property name="pixmap">
-                    <pixmap></pixmap>
-                </property>
             </column>
             <column>
                 <property name="text">
                     <string>Value</string>
-                </property>
-                <property name="pixmap">
-                    <pixmap></pixmap>
                 </property>
             </column>
             <property name="name">
@@ -178,19 +142,35 @@
             </property>
             <property name="sizeHint">
                 <size>
-                    <width>20</width>
-                    <height>0</height>
+                    <width>240</width>
+                    <height>16</height>
                 </size>
             </property>
         </spacer>
+        <widget class="KURLRequester" row="0" column="1" rowspan="1" colspan="2">
+            <property name="name">
+                <cstring>BuildXML</cstring>
+            </property>
+        </widget>
     </grid>
 </widget>
+<tabstops>
+    <tabstop>BuildXML</tabstop>
+    <tabstop>Verbosity</tabstop>
+    <tabstop>Properties</tabstop>
+</tabstops>
 <includes>
-<include location="global" impldecl="in implementation">kcombobox.h</include>
-<include location="global" impldecl="in implementation">klineedit.h</include>
-<include location="global" impldecl="in implementation">kpushbutton.h</include>
+    <include location="global" impldecl="in implementation">kcombobox.h</include>
+    <include location="global" impldecl="in implementation">klineedit.h</include>
+    <include location="global" impldecl="in implementation">kpushbutton.h</include>
     <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+<includehints>
+    <includehint>kcombobox.h</includehint>
+    <includehint>kurlrequester.h</includehint>
+    <includehint>klineedit.h</includehint>
+    <includehint>kpushbutton.h</includehint>
+</includehints>
 </UI>
