--- a/buildtools/ant/classpathwidget.ui
+++ b/buildtools/ant/classpathwidget.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>ClassPathWidget</class>
 <widget class="QWidget">
     <property name="name">
@@ -24,17 +24,19 @@
                 <cstring>ClassPath</cstring>
             </property>
             <property name="title">
-                <string>Classpath</string>
+                <string>Class&amp;path</string>
             </property>
         </widget>
     </hbox>
 </widget>
 <includes>
     <include location="global" impldecl="in implementation">keditlistbox.h</include>
-</includes>
-<includes>
     <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+<includehints>
+    <includehint>keditlistbox.h</includehint>
+    <includehint>klineedit.h</includehint>
+</includehints>
 </UI>
