--- a/buildtools/autotools/targetoptionsdlgbase.ui
+++ b/buildtools/autotools/targetoptionsdlgbase.ui
@@ -475,117 +475,82 @@
                 <attribute name="title">
                     <string>Ar&amp;guments</string>
                 </attribute>
-                <spacer>
+                <grid>
                     <property name="name">
-                        <cstring>Spacer3_2</cstring>
+                        <cstring>unnamed</cstring>
                     </property>
-                    <property name="orientation">
-                        <enum>Horizontal</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Fixed</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>8</x>
-                            <y>80</y>
-                            <width>20</width>
-                            <height>20</height>
-                        </rect>
-                    </property>
-                </spacer>
-                <spacer>
-                    <property name="name">
-                        <cstring>Spacer1_2</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Vertical</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Preferred</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>50</height>
-                        </size>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>300</x>
-                            <y>0</y>
-                            <width>20</width>
-                            <height>50</height>
-                        </rect>
-                    </property>
-                </spacer>
-                <spacer>
-                    <property name="name">
-                        <cstring>Spacer4_2</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Vertical</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>270</height>
-                        </size>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>300</x>
-                            <y>110</y>
-                            <width>20</width>
-                            <height>270</height>
-                        </rect>
-                    </property>
-                </spacer>
-                <widget class="QLineEdit">
-                    <property name="name">
-                        <cstring>run_arguments_edit</cstring>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>40</x>
-                            <y>80</y>
-                            <width>555</width>
-                            <height>23</height>
-                        </rect>
-                    </property>
-                </widget>
-                <widget class="QLabel">
-                    <property name="name">
-                        <cstring>arguments_label_1</cstring>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>8</x>
-                            <y>55</y>
-                            <width>580</width>
-                            <height>18</height>
-                        </rect>
-                    </property>
-                    <property name="font">
-                        <font>
-                        </font>
-                    </property>
-                    <property name="text">
-                        <string>Run arguments (only valid for executable targets):</string>
-                    </property>
-                    <property name="buddy" stdset="0">
-                        <cstring>run_arguments_edit</cstring>
-                    </property>
-                </widget>
+                    <spacer row="2" column="0">
+                        <property name="name">
+                            <cstring>Spacer3_2</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Horizontal</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Fixed</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <spacer row="0" column="1">
+                        <property name="name">
+                            <cstring>Spacer1_2</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Vertical</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Preferred</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>50</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <spacer row="3" column="1">
+                        <property name="name">
+                            <cstring>Spacer4_2</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Vertical</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>270</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <widget class="QLabel" row="1" column="0" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>arguments_label_1</cstring>
+                        </property>
+                        <property name="font">
+                            <font>
+                            </font>
+                        </property>
+                        <property name="text">
+                            <string>&amp;Run arguments (only valid for executable targets):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>run_arguments_edit</cstring>
+                        </property>
+                    </widget>
+                    <widget class="QLineEdit" row="2" column="1">
+                        <property name="name">
+                            <cstring>run_arguments_edit</cstring>
+                        </property>
+                    </widget>
+                </grid>
             </widget>
         </widget>
         <widget class="QLayoutWidget">
